Sat Jan 18 18:38:50 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/INet/HTTPS_Context.cpp:
          Copy constructor is declared private so that it can't be used,
          no need for an implementation, resolves Coverity error

Fri Jan 17 10:11:41 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS/server/HTTP_Server.cpp:
          Added missing break

Thu Jan 16 10:36:20 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/High_Res_Timer.cpp:
          Fixed implementation of ACE_High_Res_Timer::global_scale_factor,
          only set the global_scale_factor_status_ when it is zero and we
          have the lock.

Thu Jan  9 12:33:11 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Upgraded to doxygen 1.8.6

Thu Jan  9 10:26:46 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepare for next release

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Make x.2.4 public to the world

Thu Jan 09 09:18:31 CET 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.4 released.

Fri Jan  3 13:34:01 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_31_Test.cpp:
          Small extension, also add one example using a late specified
          return type

Tue Dec 31 10:17:54 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_32_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New C++11 test for unions

Tue Dec 31 10:12:14 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_29_Test.cpp:
          Added another member
