@@ -1,3 +1,8 @@
+Wed Jan 22 08:36:43 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/coverity_model.cpp:
+          Coverity model file
+
 Sat Jan 18 18:38:50 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * protocols/ace/INet/HTTPS_Context.cpp:
